# tinylang

./: .gitignore
cacl/: CMakeLists.txt
cacl/include/: Lexer.h  Parser.h  SematicCheck.h  Version.h
cacl/lib/: CMakeLists.txt  CodeGen.cpp  Lexer.cpp  Parser.cpp  SematicCheck.cpp  Version.cpp
cacl/tools/: CMakeLists.txt  Driver.cpp
tinylang/: CMakeLists.txt  Gcd.mod  tinylang-change.ebnf
tinylang/include/tinylang/AST/: AST.h  Base.h
tinylang/include/tinylang/Basic/: Diagnostic.h  LLVM.h  TokenKinds.h
tinylang/include/tinylang/CodeGen/: CGModule.h  CGProcedure.h
tinylang/include/tinylang/Lexer/: Lexer.h  Token.h
tinylang/include/tinylang/Parser/: ParserBase.h  TinylangParser.h
tinylang/include/tinylang/Sema/: Sema.h
tinylang/lib/: CMakeLists.txt
tinylang/lib/Basic/: CMakeLists.txt  Common.cpp  Diagnostic.cpp  TokenKinds.cpp
tinylang/lib/CodeGen/: CGModule.cpp  CGProcedure.cpp  CMakeLists.txt
tinylang/lib/Lexer/: CMakeLists.txt  Lexer.cpp  Token.cpp
tinylang/lib/Parser/: CMakeLists.txt  TinylangParser.cpp
tinylang/lib/Sema/: CMakeLists.txt  Scope.cpp  Sema.cpp
tinylang/tools/driver/: CMakeLists.txt  Driver.cpp
tinylang/unittest/: CMakeLists.txt  DiagnosticTest.cpp  Gcd.txt  LexerTest.cpp  ParseTest.cpp
tinylang/unittest/input/: Input.txt  ParseInput.txt
